<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsuario"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/etUsuario"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="numberPassword" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbLembrar"
        android:id="@+id/cbLembrar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btLogin"
        android:drawableLeft="@drawable/ic_person"
        android:text="@string/btLogin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btCamera"
        android:drawableLeft="@drawable/ic_menu_camera"
        android:text="@string/btCamera"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btSaveAluno"
        android:drawableLeft="@drawable/ic_person"
        android:text="@string/btSaveAluno"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btUploadAluno"
        android:drawableLeft="@drawable/ic_menu_camera"
        android:text="@string/btUploadAluno"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/lvPareados">
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDadosRecebidos"/>


</LinearLayout>